Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13421

Crash in devenum_winetest:devenum test_moniker_isequal due to missing renderer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • Audio

    Description

      https://reactos.org/testman/compare.php?ids=53123,53126,53136,53142

      Running Wine Test, Module: devenum, Test: devenum
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\win32\avicap32\avicap32.c:156) capGetDriverDescriptionW() not fully implemented!
      fixme:(..\dll\directx\wine\devenum\mediacatenum.c:478) ignoring IBindCtx 00137090
      Access violation - code c0000005 (first chance)
      First chance exceptions are reported before any exception handling.
      This exception may be expected and handled.
      001b:63006f00 ??              ???
      kd> k
      ChildEBP RetAddr  
      WARNING: Frame IP not in any known module. Following frames may be wrong.
      0012fd14 795b6ab9 0x63006f00
      0012fd70 00401af4 devenum!DEVENUM_IMediaCatMoniker_IsEqual+0x89 [c:\ros\reactos\reactos\dll\directx\wine\devenum\mediacatenum.c @ 538]
      0012fdf4 004010c4 devenum_winetest!test_moniker_isequal+0x3b4 [c:\ros\reactos\reactos\modules\rostests\winetests\devenum\devenum.c @ 188]
      0012fe14 004025eb devenum_winetest!func_devenum+0xb4 [c:\ros\reactos\reactos\modules\rostests\winetests\devenum\devenum.c @ 253]
      0012fe30 004024ba devenum_winetest!run_test+0xab [c:\ros\reactos\reactos\sdk\include\reactos\wine\test.h @ 692]
      0012fecc 0040386a devenum_winetest!main+0x1ca [c:\ros\reactos\reactos\sdk\include\reactos\wine\test.h @ 748]
      0012ffb4 00403b38 devenum_winetest!__tmainCRTStartup+0x2ba [c:\ros\reactos\reactos\sdk\lib\crt\startup\crtexe.c @ 311]
      0012ffc0 7c773a44 devenum_winetest!mainCRTStartup+0x28 [c:\ros\reactos\reactos\sdk\lib\crt\startup\crtexe.c @ 196]
      0012fff0 00000000 kernel32!BaseProcessStartup+0x54 [c:\ros\reactos\reactos\dll\win32\kernel32\client\proc.c @ 478]
      kd> ?? pmkOtherMoniker
      struct IMoniker * 0x00137128
         +0x000 lpVtbl           : 0x00010003 IMonikerVtbl
      kd> ?? enum_moniker0
      struct IEnumMoniker * 0x00138c48
         +0x000 lpVtbl           : 0x795bb578 IEnumMonikerVtbl
      kd> ?? enum_moniker0->lpVtbl
      struct IEnumMonikerVtbl * 0x795bb578
         +0x000 QueryInterface   : 0x795b7170     int  devenum!DEVENUM_IEnumMoniker_QueryInterface+0
         +0x004 AddRef           : 0x795b72b0     unsigned int  devenum!DEVENUM_IEnumMoniker_AddRef+0
         +0x008 Release          : 0x795b7350     unsigned int  devenum!DEVENUM_IEnumMoniker_Release+0
         +0x00c Next             : 0x795b4e20     int  devenum!DEVENUM_IEnumMoniker_Next+0
         +0x010 Skip             : 0x795b50d0     int  devenum!DEVENUM_IEnumMoniker_Skip+0
         +0x014 Reset            : 0x795b5200     int  devenum!DEVENUM_IEnumMoniker_Reset+0
         +0x018 Clone            : 0x795b5290     int  devenum!DEVENUM_IEnumMoniker_Clone+0
      kd> ?? enum_moniker1
      struct IEnumMoniker * 0x00137110
         +0x000 lpVtbl           : 0x795bb578 IEnumMonikerVtbl

      The _Next operation on moniker1 returned S_FALSE (which will not cause the SUCCEEDED check to fail) because the following key is empty in ROS:
      HKCU\SOFTWARE\MICROSOFT\ACTIVEMOVIE\DEVENUM{E0F158E1-CB04-11D0-BD4E-00A0C911CE86}

      Whether or no having no renderers in that category is expected, I cannot say. The test certainly shouldn't be using SUCCEEDED.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: