[DEVENUM_WINETEST] - Fix return value check for IEnumMoniker_Next. Fixes crash when running the test without renderers installed (as is the case on ROS). CORE-13421 #resolve

svn path=/trunk/; revision=75030